--- a/about.html
+++ b/about.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/freelancer.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-about.css">
     <title>A propos de nous !</title>
 </head>
 <body>
@@ -36,7 +35,7 @@
                         <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
                         <li><a href="nosoffres.html">Nos Offres</a></li>
                         <li  class="active"><a href="about.html">À Propos</a></li>
-                        <li><a href="#">Je m'inscris</a></li>
+                        <li><a href="contact.html">Je déménage</a></li>
                     </ul>
                 </div>
             </div>
@@ -48,7 +47,7 @@
     <!-- STORY TELLING -->
 
     <div class="container-fluid inner-cont">
-        <h2 id="about">NOTRE HISTOIRE</h2>
+        <h2 class="about">NOTRE HISTOIRE</h2>
         <hr class="separator3">
         <section class="valeur container">
             <div class="row">
@@ -84,6 +83,7 @@
                 <div class="col-md-4">
                     <img class="imgvaleur" src="img/ban1.jpg" alt="quality">
                 </div>
+            </div>
         </section>
     </div>
 
@@ -92,7 +92,7 @@
 
     <div class="container-fluid inner-cont">
 
-        <h2 id="about">NOS VALEURS</h2>
+        <h2 class="about">NOS VALEURS</h2>
         <hr class="separator3">
 
         <section class="valeur container">
@@ -130,7 +130,7 @@
     <!-- US -->
 
     <div class="container-fluid inner-cont">
-        <h2 id="about">ENVIE DE NOUS REJOINDRE ?</h2>
+        <h2 class="about">ENVIE DE NOUS REJOINDRE ?</h2>
         <hr class="separator3">
         <section class="valeur container">
             <div class="row">
@@ -188,7 +188,29 @@
 
     <!--MARK FOOTER-->
     <footer class="container-fluid footer">
-
+        <div class="row">
+            <div class=" col-md-offset-2 col-md-3 col-sm-2 col-xs-12">
+                <a href="mentionslegales.html" target="_blank" class="footerA"><h3 class="footcol">Mentions Légales</h3></a>
+            </div>
+            <div class=" col-md-2 col-sm-2 col-xs-12">
+                <a href="contact.html" class="footerA"><h3 class="footcol">Contact</h3></a>
+            </div>
+            <div class="soccol col-md-2 col-sm-2 col-xs-12">
+                <div class="container-fluid">
+                    <div class="col-md-4">
+                        <a href="http://facebook.com" class="sociallogo"><img src="img/facebook-letter-logo.svg" alt="Facebook Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="http://twitter.com"
+                           class="sociallogo"><img src="img/twitter-logo.svg" alt="Twitter Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="http://linkedin.com"
+                           class="sociallogo"><img src="img/linkedin-logo.svg" alt="LinkedIn Logo"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
