--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <title>Gros Cartons</title>
     <meta charset="UTF-8">
+    <title>Les Gros Bras</title>
+    <meta name="description" content="Un service génial de déménagement !">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/freelancer.min.css">
-
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -36,7 +36,7 @@
                         <li class="active"><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
                         <li><a href="nosoffres.html">Nos Offres</a></li>
                         <li><a href="about.html">À Propos</a></li>
-                        <li><a href="#">Je m'inscris</a></li>
+                        <li><a href="contact.html">Je déménage</a></li>
                     </ul>
                 </div>
             </div>
@@ -45,7 +45,7 @@
     <!--MARK HERO BANNER-->
     <section class="container-fluid banner">
         <div class="container inner-banner">
-            <form action="" class="col-md-offset-3 col-md-6 formAccueil">
+            <form action="contact.html" class="col-md-offset-3 col-md-6 formAccueil">
                 <div class="form-group">
                     <label class="sr-only" for="depart">Adresse de départ</label>
                     <label class="sr-only" for="arrivee">Adresse d'arrivée</label>
@@ -105,9 +105,7 @@
                 </p>
                 <p>
                     Vous remplissez<b> le formulaire en ligne </b> et vous serez appelés.
-
                     <br>
-
                 </p>
             </div>
         </div>
@@ -133,23 +131,32 @@
             <div class="col-md-4 bordureJaune section1">
                 <img class="imgvaleur" src="img/medal.png" alt="quality">
                 <h3>Sécurité</h3>
-                <p>Vos objets sont assurés</p>
+                <p>Garantie vol et casse<br>
+                    Données personnelles sécurisées<br>
+                    Assistance H24 en cas de panne
+                </p>
             </div>
 
             <div class="col-md-4 bordureJaune section2 ">
                 <img class="imgvaleur" src="img/dollar-symbol.png" alt="quality">
                 <h3>Qualité</h3>
-                <p>Les matériaux utilisés sont de qualités, de même que pour nos
-                    déménageurs qui sont formés et expert dans la matière</p>
+                <p>Sélection de devis sur mesure<br>
+                    Suivi qualité systématique<br>
+                    Professionnels certifiés<br>
+                    Matériaux écologiques et recyclables</p>
             </div>
 
             <div class="col-md-4 bordureJaune section3">
                 <img class="imgvaleur" src="img/heart.png" alt="quality">
                 <h3>Confiance</h3>
-                <p> Vos effigies personnels restent entre nous.</p>
+                <p> Informations non divulguées à autrui<br>
+                Conseils personnalisés<br>
+                Aucun surcoût le jour du déménagement<br>
+                Réduction des retours à vide.</p>
             </div>
         </div>
     </section>
+
     <!--MARK FOOTER-->
     <footer class="container-fluid footer">
         <div class="row">
@@ -157,18 +164,20 @@
                 <a href="mentionslegales.html" target="_blank" class="footerA"><h3 class="footcol">Mentions Légales</h3></a>
             </div>
             <div class=" col-md-2 col-sm-2 col-xs-12">
-                <h3 class="footcol">Contact</h3>
+                <a href="contact.html" class="footerA"><h3 class="footcol">Contact</h3></a>
             </div>
             <div class="soccol col-md-2 col-sm-2 col-xs-12">
                 <div class="container-fluid">
                     <div class="col-md-4">
-                        <a href="#"><img src="img/facebook-letter-logo.svg" alt="Facebook Logo"></a>
+                        <a href="http://facebook.com" class="sociallogo"><img src="img/facebook-letter-logo.svg" alt="Facebook Logo"></a>
                     </div>
                     <div class="col-md-4">
-                        <a href="#"><img src="img/twitter-logo.svg" alt="Twitter Logo"></a>
+                        <a href="http://twitter.com"
+                           class="sociallogo"><img src="img/twitter-logo.svg" alt="Twitter Logo"></a>
                     </div>
                     <div class="col-md-4">
-                        <a href="#"><img src="img/linkedin-logo.svg" alt="LinkedIn Logo"></a>
+                        <a href="http://linkedin.com"
+                           class="sociallogo"><img src="img/linkedin-logo.svg" alt="LinkedIn Logo"></a>
                     </div>
                 </div>
             </div>
