--- a/nosoffres.html
+++ b/nosoffres.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/freelancer.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-nosoffres.css">
 </head>
 <body>
     <!--MARK HEADER-->
@@ -29,14 +28,14 @@
                 </div>
                 <div class="navbar-text hidden-sm hidden-xs">
                     <span>Besoin d'assistance ?</span>
-                    <a href="tel:01234567" id="contact_tel" title="Contactez-nous">01 23 45 67 89</a>
+                    <a href="tel:01234567" title="Contactez-nous">01 23 45 67 89</a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-nav-custom">
                         <li><a href="index.html">Accueil<span class="sr-only">(current)</span></a></li>
                         <li class="active"><a href="#">Nos Offres</a></li>
                         <li><a href="about.html">À Propos</a></li>
-                        <li><a href="#">Je m'inscris</a></li>
+                        <li><a href="contact.html">Je déménage</a></li>
                     </ul>
                 </div>
             </div>
@@ -54,7 +53,7 @@
                     </h2>
                     <img class="image" src="img/logo.png" alt="offreking">
                     <a class="btn btn-danger" href="#" role="button">ALL INCLUSIVE</a>
-                    <h3  style="margin-top: 30px">Tu t’occupes de rien - On s’occupe de tout !</h3>
+                    <h3 style="margin-top: 30px">Tu t’occupes de rien - On s’occupe de tout !</h3>
                     <br>
                     <div class="liste" style="text-align: justify">
                         <ol>
@@ -67,13 +66,12 @@
                             </li>
                         </ol>
                     </div>
-                    <!--</p>-->
                 </div>
                 <div class="col-md-4  section2">
                     <h2> PACK FAST AND FURIOUS</h2>
                     <img class="image" src="img/logo.png" alt="offrefast">
                     <a class="btn btn-info" href="#" role="button">A L'HEURE</a>
-                    <h3 class="p2"  style="margin-top: 30px"> Petit budget ? Pas de problème ! </h3><br>
+                    <h3 class="p2" style="margin-top: 30px"> Petit budget ? Pas de problème ! </h3><br>
                     <div class="liste">
                         Réservez votre déménagement directement en ligne et configurez votre prestation de déménagement :
 
@@ -87,7 +85,6 @@
                             </ul>
                         </div>
                     </div>
-                    <!--</p>-->
                 </div>
                 <div class="col-md-4 section3">
                     <h2> PACK DIY <br> <br></h2>
@@ -104,9 +101,11 @@
                             <li>Fournitures de déménagement</li>
                         </ul>
                     </div>
+                </div>
             </section>
         </div>
     </div>
+
     <div class="container">
         <div class="row">
 
@@ -182,15 +181,36 @@
                         </div>
                     </div>
                 </div>
-
-
             </section>
-
         </div>
     </div>
+
     <!--MARK FOOTER-->
     <footer class="container-fluid footer">
-
+        <div class="row">
+            <div class=" col-md-offset-2 col-md-3 col-sm-2 col-xs-12">
+                <a href="mentionslegales.html" target="_blank" class="footerA"><h3 class="footcol">Mentions Légales</h3></a>
+            </div>
+            <div class=" col-md-2 col-sm-2 col-xs-12">
+                <a href="contact.html" class="footerA"><h3 class="footcol">Contact</h3></a>
+            </div>
+            <div class="soccol col-md-2 col-sm-2 col-xs-12">
+                <div class="container-fluid">
+                    <div class="col-md-4">
+                        <a href="http://facebook.com" class="sociallogo"><img src="img/facebook-letter-logo.svg"
+                                                                              alt="Facebook Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="http://twitter.com"
+                           class="sociallogo"><img src="img/twitter-logo.svg" alt="Twitter Logo"></a>
+                    </div>
+                    <div class="col-md-4">
+                        <a href="http://linkedin.com"
+                           class="sociallogo"><img src="img/linkedin-logo.svg" alt="LinkedIn Logo"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
